--- a/RPS.tests/ModelTests/RPS.Tests.csproj
+++ b/RPS.tests/ModelTests/RPS.Tests.csproj
@@ -10,7 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\TEMPLATE\TEMPLAT.csproj" />  
+    <ProjectReference Include="..\RPS\RPS.Tests.csproj" />  
   </ItemGroup>
 
 </Project>
