--- a/RPS.tests/RPS.Tests.csproj
+++ b/RPS.tests/RPS.Tests.csproj
@@ -2,7 +2,14 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
+      <GenerateAssemblyInfo>
+        false
+      </GenerateAssemblyInfo> 
+      <GenerateTargetFrameworkAttribute>
+        false
+      </GenerateTargetFrameworkAttribute>
   </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.2" />
     <PackageReference Include="MSTest.TestAdapter" Version="2.2.10" />
@@ -10,7 +17,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\RPS\RPS.Tests.csproj" />  
+    <ProjectReference Include="..\RPS\RPS.csproj" /> 
   </ItemGroup>
+
 
 </Project>
